tests/test_cqasm_v1.0/valid/gates/my90.qasm
version 1.0
qubits 2

map q[0], q0

my90 q[0]
my90 q0
my90 q[1]

display

