tests/test_cqasm_v1.0/invalid/faulty_floating.qasm
version 1.0
qubits 1

map q[0], q0

rx q0 .1